Reference Model from Infrastructure

--- a/Counting/Assets/Code/Infrastructure/Infrastructure.asmdef
+++ b/Counting/Assets/Code/Infrastructure/Infrastructure.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "Infrastructure",
     "references": [
-        "Zenject"
+        "Zenject",
+        "Model"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
